# oeg.iv

./: .pylintrc  MANIFEST.in  README.md  makefile  radon.cfg  setup.cfg  setup.py
.github/workflows/: pep257.yml  py2.yml  py3.yml  tests.yml
fixtures/: infotech.csv
oeg_iv/: __init__.py  orientation.py  py23.py
oeg_iv/csvfile/: README.md  __init__.py  row.py  tubes.py
tests/: conftest.py  requirements.txt
tests/test/: __init__.py  test_orientation.py  test_readme.py
tests/test/test_csv/: __init__.py  test_init.py  test_row.py  test_tubes.py
