[metadata]
name = oeg_iv
version = 1.9.2
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Python package for communication with InspectionViewer app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/oeg.iv
project_urls =
    Bug Tracker = https://github.com/vb64/oeg.iv/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
packages = oeg_iv
include_package_data=True
install_requires = py23
